--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,11 @@
 .app{
-  
 }
 .top-wrapper{
   height:100px;
 }
-
+.content-wrapper{
+  margin-top: 1%;
+}
 .left-wrapper{
   width: 30%;
   float: left;
@@ -17,4 +18,5 @@
   float: right;
   background-color: aqua;
   height: 100%;
+  text-align: center;
 }
